2013-12-19  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (S2KCOUNT): It's now 192, as the threat model
	of Gnuk Token is different.

2013-12-19  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl/library/bignum.c (mpi_montsqr): New.
	(mpi_exp_mod): Use mpi_montsqr.

	Note that this change introduces a vulnerability by the
	Yarom/Falkner flush+reload cache side-channel attack.  When this
	code is used on general purpose computer where we can observe
	which code is executed (sqr or mul), it's not safe.

2013-12-16  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl/include/polarssl/bn_mul.h (MULADDC_1024_CORE)
	(MULADDC_1024_LOOP, MULADDC_HUIT, MULADDC_INIT, MULADDC_CORE)
	(MULADDC_STOP) [__arm__]: The value of input B won't change.
	More acculate specification for asm statement.

	* polarssl/library/bignum.c (mpi_cmp_abs_limbs): New.
	(mpi_montmul): Change the signature and use the upper half of T.
	(mpi_montred): Likewise.
	(mpi_exp_mod): Use improved mpi_montmul and mpi_montred.
	(mpi_sub_hlp, mpi_mul_hlp): Add const qualifier for S.

2013-12-13  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl/library/bignum.c (mpi_exp_mod): Initialize lower
	half of T with zero.
	(mpi_montmul): Don't need to clear lower half of
	T, as we keep zero.  Call mpi_sub_hlp with upper half of T.
	(mpi_montred): Ditto.

	* polarssl/library/bignum.c (mpi_montmul, mpi_montred): Minimize
	number of limbs for T.
	(mpi_exp_mod): Only allocate N-n * 2 for T.
	Only allocate N->n for X, W[i], and RR.

2013-12-13  Niibe Yutaka  <gniibe@fsij.org>

	* tool/upgrade_by_passwd.py (main): Support -k to specify KEYNO.

2013-12-13  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_ctrl.c (HID_LED_STATUS_CARDCHANGE): Rename from
	HID_LED_STATUS_NUMLOCK.

	* tool/gnuk_token.py (gnuk_token.stop_gnuk): Detach kernel
	driver of HID.

2013-12-12  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (do_openpgpcard_aid): Coerce to volatile to
	force memory access at run time.

2013-12-11  Niibe Yutaka  <gniibe@fsij.org>
